# pdf-annotations-to-markdown

./: .gitignore  README.md  example.py  pyproject.toml  requirements.txt
src/: __init__.py  constants.py  pdf_annotations_to_markdown.py
src/pdf_annotations_to_markdown/: __init__.py  cli.py  constants.py  core.py
