[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-annotations-to-markdown"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = ["pymupdf"]

[project.scripts]
extract-pdf-annotations = "pdf_annotations_to_markdown.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
